Add files related to starting LightSide in Java > 8